# mesh-data-tile

./: .gitignore  Cargo.toml  README.ja.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.browser.config.ts
.github/workflows/: pages.yml  rust-test.yml  test.yml
examples/maplibre-jismesh/: README.md  generate-tiles.ts  index.html  main.ts  package.json  style.css  vite.config.ts
references/rust/: Cargo.toml  README.md
references/rust/src/: common.rs  consts.rs  decoder.rs  encoder.rs  lib.rs
references/rust/tests/: conformance.rs
spec/: tile-format-v1.md
src/: api.ts  browser.ts  cli.ts  compression.ts  crc32.ts  errors.ts  index.ts  jismesh.ts  maplibre-source.ts  payload.ts  tile-format.ts  tile-id.ts  types.ts
test/: conformance.test.ts  maplibre-source.test.ts
test/fixtures/: compressed.tile  uncompressed.tile  xyz-compressed.tile  xyz-uncompressed.tile
